--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,33 +1,38 @@
-<%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+  <%= form_for(@user) do |f| %>
+    <% if @user.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
-      <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% @user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+      <%= f.label :email %><br>
+      <%= f.text_field :email, class: 'form-control'  %>
+
+
+      <%= f.label :first_name %><br>
+      <%= f.text_field :first_name , class: 'form-control' %>
+
+
+      <%= f.label :last_name %><br>
+      <%= f.text_field :last_name, class: 'form-control'  %>
+
+      <%= f.label :password %><br>
+      <%= f.password_field :password, class: 'form-control'  %>
+
+      <%= f.label :password_confirmation %><br>
+      <%= f.password_field :password_confirmation, class: 'form-control'  %>
+
+    <div class="actions">
+      <%= f.submit  class: "btn btn-primary" %>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
   </div>
-  <div class="field">
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
-    <%= f.label :last_name %><br>
-    <%= f.text_field :last_name %>
-  </div>
-  <div class="field">
-    <%= f.label :role %><br>
-    <%= f.text_field :role %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
