--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,35 +1,22 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Listing Articles</h1>
 <div class=" col-md-12">
   <% @articles.each do |article| %>
-<!--<div class="panel panel-default">
-  <div class="panel-heading"><%= article.title %></div>
-  <div class="panel-body">
-    <div class="card-content">
-      <%= article.body %>
-      <%= link_to 'Show', article %>
-      <%= link_to 'Edit', edit_article_path(article) %>
-      <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <div class=" col-md-6">
+    <div class="card card-block">
+      <h4 class="card-title"><%= article.title %></h4>
+      <p class="card-text"><%= article.user.email %> -- <%= article.body %></p>
+      <%= link_to 'Read more ...', article , class: "card-link" %>
+      <% if user_signed_in? %>
+        <% if article.can_edit(current_user) %>
+          <%= link_to 'Edit', edit_article_path(article) , class: "card-link"%>
+        <%end%>
+        <% if  current_user.admin? %>
+          <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' }, class: "card-link" %>
+        <%end%>
+      <%end%>
     </div>
-    <%= article.user.first_name %>
   </div>
-</div>-->
-<div class=" col-md-6">
-  <div class="card card-block">
-    <h4 class="card-title"><%= article.title %></h4>
-    <p class="card-text"><%= article.user.email %> -- <%= article.body %></p>
-    <%= link_to 'Read more ...', article , class: "card-link" %>
-    <% if user_signed_in? %>
-      <%= link_to 'Edit', edit_article_path(article) , class: "card-link"%>
-      <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' }, class: "card-link" %>
-    <%end%>
-  </div>
-</div>
-
 <% end %>
 </div>
 <br>
-
-
 <%= link_to 'New Article', new_article_path %>
