--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,9 @@
 <body>
     <%= render 'layouts/header' %>
     <div class="container">
+      <p id="notice"><%= notice %></p>
       <%= yield %>
        <%= render 'layouts/footer' %>
-       <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
