--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -19,7 +19,7 @@ pre {
 }
 
 a {
-  color: #000;
+  color: #0080FF;
 
   &:visited {
     color: #666;
@@ -27,7 +27,7 @@ a {
 
   &:hover {
     color: #fff;
-    background-color: #000;
+    background-color: #fff;
   }
 }
 
