--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,22 +1,43 @@
-<h1>Listing Articles</h1>
-<div class=" col-md-12">
-  <% @articles.each do |article| %>
-  <div class=" col-md-6">
-    <div class="card card-block">
-      <h4 class="card-title"><%= article.title %></h4>
-      <p class="card-text"><%= article.user.email %> -- <%= article.body %></p>
-      <%= link_to 'Read more ...', article , class: "card-link" %>
-      <% if user_signed_in? %>
-        <% if article.can_edit(current_user) %>
-          <%= link_to 'Edit', edit_article_path(article) , class: "card-link"%>
-        <%end%>
-        <% if  current_user.admin? %>
-          <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' }, class: "card-link" %>
-        <%end%>
-      <%end%>
+<div class="row">
+  <div class="col-md-1"></div>
+    <div class="col-md-10">
+      <div id="postlist">
+        <h1>Articles</h1>
+        <% @articles.each do |article| %>
+        <div class="panel">
+            <div class="panel-heading">
+                <div class="text-center">
+                    <div class="row">
+                        <div class="col-sm-9">
+                            <h3 class="pull-left"><%= article.title %></h3>
+                        </div>
+                        <div class="col-sm-3">
+                            <h4 class="pull-right">
+                            <small><em><%= article.created_at%></em></small>
+                            </h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-body">
+                <p class="short-text"><%= article.body %></p>
+                <%= link_to 'Read more ...', article , class: "card-link" %>
+                <% if user_signed_in? %>
+                  <% if article.can_edit(current_user) %>
+                    <%= link_to 'Edit', edit_article_path(article) , class: "card-link"%>
+                  <%end%>
+                  <% if  current_user.admin? %>
+                    <%= link_to 'Delete', article, method: :delete, data: { confirm: 'Are you sure?' }, class: "card-link" %>
+                  <%end%>
+                <%end%>
+            </div>
+              <div class="panel-footer">
+                  <span class="label label-default"><%= article.title %></span> <span class="label label-default">Updates</span> <span class="label label-default"><%= article.updated_at %></span>
+              </div>
+          </div>
+        <% end %>
     </div>
+    <br>
+    <%= link_to 'New Article', new_article_path, class: "btn btn-primary btn-large" %>
   </div>
-<% end %>
 </div>
-<br>
-<%= link_to 'New Article', new_article_path %>
