--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,19 +1,22 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @article.body %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @article.user.first_name %>
-</p>
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+<div class="row">
+  <div class="col-sm-12 col-lg-12">
+    <p id="notice"><%= notice %></p>
+    <h1><%= @article.title %></h1>
+    <p>
+      by <%= @article.user.first_name %>
+    </p>
+    <p>
+      <strong>Body:</strong>
+      <%= @article.body %>
+    </p>
+    <% if user_signed_in? %>
+      <% if @article.can_edit(current_user) %>
+        <%= link_to 'Edit', edit_article_path(@article) , class: "btn btn-primary"%>
+      <%end%>
+      <% if  current_user.admin? %>
+        <%= link_to 'Delete', @article, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+      <%end%>
+    <%end%>
+      <%= link_to 'Back', articles_path , class: "btn btn-default"%>
+  </div>
+</div>
