--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,38 +1,57 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name, autofocus: true %>
-  </div>
-  <div class="field">
-    <%= f.label :last_name %><br>
-    <%= f.text_field :last_name  %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email%>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), role: "form") do |f| %>
+        <%= devise_error_messages! %>
+        <h2>Please Sign Up <small>It's free and always will be.</small></h2>
+  			<hr class="colorgraph">
+  			<div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-6">
+  					<div class="form-group">
+              <div class="field">
+                <%= f.label :first_name %><br>
+                <%= f.text_field :first_name, autofocus: true,class: "form-control input-lg",placeholder:"First Name", tabindex: "1" %>
+              </div>
+  					</div>
+				  </div>
+          <div class="col-xs-12 col-sm-6 col-md-6">
+  					<div class="form-group">
+              <div class="field">
+                <%= f.label :last_name %><br>
+                <%= f.text_field :last_name,class: "form-control input-lg",placeholder:"Last Name", tabindex: "2"  %>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-12">
+            <div class="form-group">
+              <div class="field">
+                <%= f.label :email %><br />
+                <%= f.email_field :email , type:"email",class: "form-control input-lg",placeholder:"Email", tabindex: "3" %>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="form-group">
+              <div class="field">
+                <%= f.label :password %>
+                <% if @minimum_password_length %>
+                <em>(<%= @minimum_password_length %> characters minimum)</em>
+                <% end %><br />
+                <%= f.password_field :password, autocomplete: "off",class: "form-control input-lg",placeholder:"Password", tabindex: "3"  %>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="form-group">
+              <div class="field">
+                <%= f.label :password_confirmation %><br />
+                <%= f.password_field :password_confirmation, autocomplete: "off",class: "form-control input-lg",placeholder:"Password Confirmation", tabindex: "4"  %>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12 col-md-offset-1 col-md-10">
+              <%= f.submit "Sign up", class: "btn btn-primary btn-block btn-lg" ,tabindex:"5" %>
+              <%= render "devise/shared/links" %>
+          </div>
+      <% end %>
