--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,11 @@
 <footer class="footer">
   <small>
-    The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
+    The <a class="link" href="#">Rails Practice</a>
+    by <a class="link" href="#">Carlos Ricardo Mora Sánchez</a>
   </small>
   <nav>
     <ul>
       <li><%= link_to "About",   '#' %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
     </ul>
   </nav>
 </footer>
