--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,31 @@
 <p id="notice"><%= notice %></p>
 <% provide(:title, @user.first_name) %>
 <div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.first_name %>
-      </h1>
-    </section>
+  <aside class="col-md-5 col-md-offset-4">
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= @user.first_name%> <%= @user.last_name%></h3>
+      </div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-md-3 col-lg-3 " align="center"> <%= gravatar_for @user %></div>
+          <div class=" col-md-9 col-lg-9 ">
+              <table class="table table-user-information">
+                <tbody>
+                  <tr>
+                    <td>Email:</td>
+                    <td><%= @user.email%></td>
+                  </tr>
+                  <tr>
+                    <td>Role:</td>
+                    <td><%= @user.admin? ? 'Administrator' : 'Writter'%></td>
+                  </tr>
+                </tbody>
+              </table>
+               <a class="btn btn-primary" href="<%= edit_user_path(@user) %>"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
+            </div>
+          </div>
+        </div>
+      </div>
   </aside>
 </div>
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
