changes add article

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -38,6 +38,8 @@
         <% end %>
     </div>
     <br>
-    <%= link_to 'New Article', new_article_path, class: "btn btn-primary btn-large" %>
+    <% if user_signed_in? %>
+      <%= link_to 'New Article', new_article_path, class: "btn btn-primary btn-large" %>
+    <%end%>
   </div>
 </div>
