Add the own articles to the user profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,3 +29,10 @@
       </div>
   </aside>
 </div>
+<div class="row">
+  <div class="col-sm-12 col-md-12 ">
+    <h3>Your written articles</h3>
+    </div>
+    <%= display_articles(@articles)%>
+
+</div>
