fix name for a role

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
                   </tr>
                   <tr>
                     <td>Role:</td>
-                    <td><%= @user.admin? ? 'Administrator' : 'Writter'%></td>
+                    <td><%= @user.admin? ? 'Administrator' : 'Writer'%></td>
                   </tr>
                 </tbody>
               </table>
